added job links

--- a/pbs/contact/index.html
+++ b/pbs/contact/index.html
@@ -2389,7 +2389,7 @@
                                   Telangana, Hyderabad.</span>
                               </li>
                               <li class="elementor-icon-list-item">
-                                <a href="mailto:%20info@pbssoft.co.in">
+                                <a href="mailto:%20helpdesk@pbssoft.com">
 
                                   <span class="elementor-icon-list-icon">
                                     <i aria-hidden="true" class="far fa-envelope"></i> </span>
