--- a/pbs/corporate-training/index.html
+++ b/pbs/corporate-training/index.html
@@ -2107,7 +2107,7 @@
                 Welcome To Pbssoft IT Solutions </li>
               <li class="email list-inline-item">
                 <i class="glyph-icon flaticon-message-closed-envelope"></i>
-                <a href="mailto:info@pbssoft.co.in">
+                <a href="mailto:helpdesk@pbssoft.com">
                   helpdesk@pbssoft.com </a>
               </li>
 
@@ -2706,7 +2706,7 @@
                                   Hyderabad-500079.</span>
                               </li>
                               <li class="elementor-icon-list-item">
-                                <a href="mailto:%20info@pbssoft.co.in">
+                                <a href="mailto:%20helpdesk@pbssoft.com">
 
                                   <span class="elementor-icon-list-icon">
                                     <i aria-hidden="true" class="far fa-envelope"></i> </span>
