--- a/pbs/courses/devops/feed/index.html
+++ b/pbs/courses/devops/feed/index.html
@@ -1064,7 +1064,7 @@ div#comments {
 
                                             <li class="email list-inline-item">
                             <i class="glyph-icon flaticon-message-closed-envelope"></i>
-                                <a href="mailto:info@pbssoft.co.in">
+                                <a href="mailto:helpdesk@pbssoft.com">
                                    helpdesk@pbssoft.com                                </a>
                         </li>
                     
