--- a/pbs/career-development/index.html
+++ b/pbs/career-development/index.html
@@ -2662,7 +2662,7 @@
                                   Hyderabad<br> 500079</span>
                               </li>
                               <li class="elementor-icon-list-item">
-                                <a href="mailto:%20info@pbssoft.co.in">
+                                <a href="mailto:%20helpdesk@pbssoft.com">
 
                                   <span class="elementor-icon-list-icon">
                                     <i aria-hidden="true" class="far fa-envelope"></i> </span>
