--- a/pbs/new/wp-content/plugins/elementor/assets/css/widget-icon-list.min.html
+++ b/pbs/new/wp-content/plugins/elementor/assets/css/widget-icon-list.min.html
@@ -2079,7 +2079,7 @@
  </li>
               <li class="email list-inline-item">
                 <i class="glyph-icon flaticon-message-closed-envelope"></i>
-                <a href="mailto:info@pbssoft.co.in">
+                <a href="mailto:helpdesk@pbssoft.com">
                  helpdesk@pbssoft.com </a>
               </li>
 
