--- a/pbs/our-courses/index.html
+++ b/pbs/our-courses/index.html
@@ -2101,7 +2101,7 @@
                 Welcome To Pbssoft IT Solutions </li>
               <li class="email list-inline-item">
                 <i class="glyph-icon flaticon-message-closed-envelope"></i>
-                <a href="mailto:info@pbssoft.co.in">
+                <a href="mailto:helpdesk@pbssoft.com">
                   helpdesk@pbssoft.com </a>
               </li>
 
