--- a/pbs/register/index.html
+++ b/pbs/register/index.html
@@ -1084,7 +1084,7 @@ div#comments {
                     Welcome To Pbssoft IT Solutions                        </li>
                                             <li class="email list-inline-item">
                             <i class="glyph-icon flaticon-message-closed-envelope"></i>
-                                <a href="mailto:info@pbssoft.co.in">
+                                <a href="mailto:helpdesk@pbssoft.com">
                                     helpdesk@pbssoft.com                                </a>
                         </li>
                     
@@ -1291,7 +1291,7 @@ div#comments {
 										<span class="elementor-icon-list-text">#401, BnReddy Nagar, Near signal Telangana, Hyderabad-500079.</span>
 									</li>
 								<li class="elementor-icon-list-item">
-											<a href="mailto:%20info@pbssoft.co.in">
+											<a href="mailto:%20helpdesk@pbssoft.com">
 
 												<span class="elementor-icon-list-icon">
 							<i aria-hidden="true" class="far fa-envelope"></i>						</span>
