added tab menus

--- a/pbs/index.html
+++ b/pbs/index.html
@@ -2191,19 +2191,19 @@
                         <ul class="sub-menu">
                           <li id="menu-item-10264"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10264"><a
-                              href="build-management/index.html">Build Management</a></li>
+                              href="build-management/index.html" target="_blank">Build Management</a></li>
                           <li id="menu-item-10266"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10266"><a
-                              href="logging-frameworks/index.html">Logging Frameworks</a></li>
+                              href="logging-frameworks/index.html" target="_blank">Logging Frameworks</a></li>
                           <li id="menu-item-10740"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
-                              href="unit-testing/index.html">Unit Testing</a></li>
+                              href="unit-testing/index.html" target="_blank">Unit Testing</a></li>
                               <li id="menu-item-10740"
                               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
-                                href="version control/index.html">version Controll</a></li>
+                                href="version control/index.html" target="_blank">version Controll</a></li>
                           <li id="menu-item-10768"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10768"><a
-                              href="integrated-development/index.html">Integrated Development</a></li>
+                              href="integrated-development/index.html" target="_blank">Integrated Development</a></li>
                         </ul>
                       </li>
                     <li id="menu-item-10469"
