added menu links

--- a/pbs/courses/azure-administration/feed/index.html
+++ b/pbs/courses/azure-administration/feed/index.html
@@ -2081,7 +2081,7 @@
 
               <li class="email list-inline-item">
                 <i class="glyph-icon flaticon-message-closed-envelope"></i>
-                <a href="mailto:helpdesk@pbssoft.com">
+                <a href="mailto:info@pbssoft.co.in">
                  helpdesk@pbssoft.com </a>
               </li>
 
