--- a/pbs/index.html
+++ b/pbs/index.html
@@ -2200,7 +2200,7 @@
                               href="unit-testing/index.html" target="_blank">Unit Testing</a></li>
                               <li id="menu-item-10740"
                               class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
-                                href="version control/index.html" target="_blank">version Controll</a></li>
+                                href="version control/index.html" target="_blank">Version Control</a></li>
                           <li id="menu-item-10768"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10768"><a
                               href="integrated-development/index.html" target="_blank">Integrated Development</a></li>
@@ -4078,7 +4078,7 @@
   <div id="qlwapp" class="qlwapp qlwapp-free qlwapp-bubble qlwapp-bottom-right qlwapp-all qlwapp-rounded">
     <div class="qlwapp-container">
 
-      <a class="qlwapp-toggle" data-action="open" data-phone="919160040789" data-message="Hello pbssoft" role="button"
+      <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Hello pbssoft" role="button"
         tabindex="0" target="_blank">
         <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
         <i class="qlwapp-close" data-action="close">&times;</i>
