--- a/pbs/placements/index.html
+++ b/pbs/placements/index.html
@@ -2188,6 +2188,29 @@
                     <li id="menu-item-10267"
                       class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10267"><a
                         href="../our-courses/index.html">Courses</a></li>
+                        <li id="menu-item-10469"
+                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-10469">
+                        <a href="#">Realtime Tools<svg class="icon icon-angle-down" aria-hidden="true" role="img">
+                            <use href="#icon-angle-down" xlink:href="#icon-angle-down"></use>
+                          </svg></a>
+                        <ul class="sub-menu">
+                          <li id="menu-item-10264"
+                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10264"><a
+                              href="../build-management/index.html" target="_blank">Build Management</a></li>
+                          <li id="menu-item-10266"
+                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10266"><a
+                              href="../logging-frameworks/index.html" target="_blank">Logging Frameworks</a></li>
+                          <li id="menu-item-10740"
+                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
+                              href="../unit-testing/index.html" target="_blank">Unit Testing</a></li>
+                              <li id="menu-item-10740"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
+                                href="../version control/index.html" target="_blank">Version Controll</a></li>
+                          <li id="menu-item-10768"
+                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10768"><a
+                              href="../integrated-development/index.html" target="_blank">Integrated Development</a></li>
+                        </ul>
+                      </li>
                     <li id="menu-item-10469"
                       class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-10469">
                       <a href="#">Trainings<svg class="icon icon-angle-down" aria-hidden="true" role="img">
@@ -2422,7 +2445,7 @@
                                 </a>
                               </li>
                               <li class="elementor-icon-list-item">
-                                <a href="tel:+919160040789">
+                                <a href="tel:+919030972470">
 
                                   <span class="elementor-icon-list-icon">
                                     <i aria-hidden="true" class="fas fa-phone"></i> </span>
@@ -2532,6 +2555,29 @@
                           href="../about-us/index.html">About</a></li>
                       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10267"><a
                           href="../our-courses/index.html">Our Courses</a></li>
+                          <li id="menu-item-10469"
+                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-10469">
+                          <a href="#">Realtime Tools<svg class="icon icon-angle-down" aria-hidden="true" role="img">
+                              <use href="#icon-angle-down" xlink:href="#icon-angle-down"></use>
+                            </svg></a>
+                          <ul class="sub-menu">
+                            <li id="menu-item-10264"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10264"><a
+                                href="../build-management/index.html" target="_blank">Build Management</a></li>
+                            <li id="menu-item-10266"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10266"><a
+                                href="../logging-frameworks/index.html" target="_blank">Logging Frameworks</a></li>
+                            <li id="menu-item-10740"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
+                                href="../unit-testing/index.html" target="_blank">Unit Testing</a></li>
+                                <li id="menu-item-10740"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
+                                  href="../version control/index.html" target="_blank">Version Controll</a></li>
+                            <li id="menu-item-10768"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10768"><a
+                                href="../integrated-development/index.html" target="_blank">Integrated Development</a></li>
+                          </ul>
+                        </li>
                       <li
                         class="menu-item menu-item-type-custom menu-item-object-custom current-menu-ancestor current-menu-parent menu-item-has-children menu-item-10469">
                         <a href="#">Trainings<svg class="icon icon-angle-down" aria-hidden="true" role="img">
@@ -2662,7 +2708,7 @@
   <div id="qlwapp" class="qlwapp qlwapp-free qlwapp-bubble qlwapp-bottom-right qlwapp-all qlwapp-rounded">
     <div class="qlwapp-container">
 
-      <a class="qlwapp-toggle" data-action="open" data-phone="919160040789" data-message="Hello Pbssoft" role="button"
+      <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Hello Pbssoft" role="button"
         tabindex="0" target="_blank">
         <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
         <i class="qlwapp-close" data-action="close">&times;</i>
