--- a/pbs/courses/selenium-with-java/index.html
+++ b/pbs/courses/selenium-with-java/index.html
@@ -2783,6 +2783,29 @@
                           href="../../about-us/index.html">About</a></li>
                       <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10267"><a
                           href="../../our-courses/index.html">Our Courses</a></li>
+                          <li id="menu-item-10469"
+                          class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-10469">
+                          <a href="#">Realtime Tools<svg class="icon icon-angle-down" aria-hidden="true" role="img">
+                              <use href="#icon-angle-down" xlink:href="#icon-angle-down"></use>
+                            </svg></a>
+                          <ul class="sub-menu">
+                            <li id="menu-item-10264"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10264"><a
+                                href="../../build-management/index.html" target="_blank">Build Management</a></li>
+                            <li id="menu-item-10266"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10266"><a
+                                href="../../logging-frameworks/index.html" target="_blank">Logging Frameworks</a></li>
+                            <li id="menu-item-10740"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
+                                href="../../unit-testing/index.html" target="_blank">Unit Testing</a></li>
+                                <li id="menu-item-10740"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10740"><a
+                                  href="../../version control/index.html" target="_blank">Version Controll</a></li>
+                            <li id="menu-item-10768"
+                              class="menu-item menu-item-type-post_type menu-item-object-page menu-item-10768"><a
+                                href="../../integrated-development/index.html" target="_blank">Integrated Development</a></li>
+                          </ul>
+                        </li>
                       <li
                         class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-10469">
                         <a href="#">Trainings<svg class="icon icon-angle-down" aria-hidden="true" role="img">
