--- a/pbs/corporate-training/index.html
+++ b/pbs/corporate-training/index.html
@@ -2733,7 +2733,7 @@
 
                                   <span class="elementor-icon-list-icon">
                                     <i aria-hidden="true" class="far fa-envelope"></i> </span>
-                                  <span class="elementor-icon-list-text"> info@pbssoft.com</span>
+                                  <span class="elementor-icon-list-text"> helpdesk@pbssoft.com</span>
                                 </a>
                               </li>
                               <li class="elementor-icon-list-item">
