--- a/pbs/corporate-training/index.html
+++ b/pbs/corporate-training/index.html
@@ -2911,6 +2911,9 @@
                   <div class="menu-support-container">
                     <ul id="menu-support" class="menu">
                       <li id="menu-item-10199"
+                      class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
+                        href="courses/java-full-stack-developer/index.html">Java Fullstack</a></li>
+                      <li id="menu-item-10199"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
                           href="../courses/selenium-with-java/index.html">Selenium with java</a></li>
                       <li id="menu-item-10200"
