--- a/pbs/courses/python/index.html
+++ b/pbs/courses/python/index.html
@@ -2634,7 +2634,7 @@
 														<b><li>Selenium with java</li></b></a>
 
 														<a href ="https://www.pbssoft.com/courses/angular-react">
-													<b><li>Angular & React</li></b></a>
+													<b><li>Web Development</li></b></a>
 													
 													<a href ="https://www.pbssoft.com/courses/devops">
 														<b><li>DEVOPS</li></b></a>
@@ -2771,6 +2771,9 @@
                   <h2 class="widget-title">Courses</h2>
                   <div class="menu-support-container">
                     <ul id="menu-support" class="menu">
+                      <li id="menu-item-10199"
+                        class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
+                          href="../java-full-stack-developer/index.html">Java Fullstack/a></li>
                       <li id="menu-item-10199"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
                           href="../selenium-with-java/index.html">Selenium with java</a></li>
