--- a/pbs/register/index.html
+++ b/pbs/register/index.html
@@ -1415,7 +1415,10 @@ class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-chi
              </div>
             <div class="col-lg-3 col-md-6 sidebar-yes">
                 <div class="footer-column">
-                    <section id="nav_menu-2" class="widget widget_nav_menu"><h2 class="widget-title">Courses</h2><div class="menu-support-container"><ul id="menu-support" class="menu"><li id="menu-item-10199" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a href="../courses/selenium-with-java/index.html">Selenium with java</a></li>
+                    <section id="nav_menu-2" class="widget widget_nav_menu"><h2 class="widget-title">Courses</h2><div class="menu-support-container"><ul id="menu-support" class="menu">
+                      <li id="menu-item-10198" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a href="../courses/java-full-stack-developer/index.html">Java Fullstack/a></li>
+
+                      <li id="menu-item-10199" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a href="../courses/selenium-with-java/index.html">Selenium with java</a></li>
 <li id="menu-item-10200" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10200"><a href="../courses/azure-administration/index.html">Azure Administration</a></li>
 <li id="menu-item-10201" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10201"><a href="../courses/devops-with-azure/index.html">DevOps with Azure</a></li>
 <li id="menu-item-10202" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10202"><a href="../courses/devops/index.html">DEVOPS</a></li>
