--- a/pbs/courses/java-full-stack-developer/$&/index.html
+++ b/pbs/courses/java-full-stack-developer/$&/index.html
@@ -2366,6 +2366,9 @@
                     <ul id="menu-support" class="menu">
                       <li id="menu-item-10199"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
+                          href="https://www.pbssoft.com/courses/java-full-stack-developer">Java Fullstack</a></li>
+                      <li id="menu-item-10199"
+                        class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
                           href="https://www.pbssoft.com/courses/selenium-with-java/">Selenium with java</a></li>
                       <li id="menu-item-10200"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10200"><a
