added chatgpet assitence

--- a/pbs/index.html
+++ b/pbs/index.html
@@ -2140,6 +2140,7 @@
                 <li> <a href="contact/index.html">Contact</a></li>
                 <li class="top-seperator">/</li>
                 <li> <a href="register/index.html">Register</a></li>
+                <li> <a href="openai/index.html">ChatGpt Assistence</a></li>
 
               </ul>
             </div>
