footer link change

--- a/pbs/our-courses/index.html
+++ b/pbs/our-courses/index.html
@@ -2800,9 +2800,9 @@
                 <h2 class="widget-title">Courses</h2>
                 <div class="menu-support-container">
                   <ul id="menu-support" class="menu">
-                    <li id="menu-item-10199"
-                    class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
-                      href="https://www.pbssoft.com/courses/java-full-stack-developer">Java Fullstack</a></li>
+                    <li id="menu-item-10196"
+                    class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10196"><a
+                      href="../courses/java-full-stack-developer/index.html">Java Fullstack</a></li>
                     <li id="menu-item-10199"
                       class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
                         href="../courses/selenium-with-java/index.html">Selenium with java</a></li>
