--- a/pbs/courses/aws-solution-architect/feed/index.html
+++ b/pbs/courses/aws-solution-architect/feed/index.html
@@ -2345,7 +2345,7 @@
                     <ul id="menu-support" class="menu">
                       <li id="menu-item-10199"
                       class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
-                        href="courses/java-full-stack-developer/index.html">Java Fullstack</a></li>
+                        href="https://www.pbssoft.com/java-full-stack-developer">Java Fullstack</a></li>
                       <li id="menu-item-10199"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
                           href="https://www.pbssoft.com/courses/selenium-with-java/">Selenium with java</a></li>
