--- a/pbs/courses/devops-with-azure/feed/index.html
+++ b/pbs/courses/devops-with-azure/feed/index.html
@@ -1247,7 +1247,11 @@ div#comments {
              </div>
             <div class="col-lg-3 col-md-6 sidebar-yes">
                 <div class="footer-column">
-                    <section id="nav_menu-2" class="widget widget_nav_menu"><h2 class="widget-title">Courses</h2><div class="menu-support-container"><ul id="menu-support" class="menu"><li id="menu-item-10199" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a href="https://www.pbssoft.com/courses/selenium-with-java/">Selenium with java</a></li>
+                    <section id="nav_menu-2" class="widget widget_nav_menu"><h2 class="widget-title">Courses</h2><div class="menu-support-container"><ul id="menu-support" class="menu">
+                      <li id="menu-item-10199"
+                      class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
+                        href="https://www.pbssoft.com/courses/java-full-stack-developer/">Java Fullstack</a></li>
+                      <li id="menu-item-10199" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a href="https://www.pbssoft.com/courses/selenium-with-java/">Selenium with java</a></li>
 <li id="menu-item-10200" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10200"><a href="https://www.pbssoft.com/courses/azure-administration/">Azure Administration</a></li>
 <li id="menu-item-10201" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10201"><a href="https://www.pbssoft.com/courses/devops-with-azure/">DevOps with Azure</a></li>
 <li id="menu-item-10202" class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10202"><a href="https://www.pbssoft.com/courses/devops/">DEVOPS</a></li>
