--- a/pbs/courses/python/index.html
+++ b/pbs/courses/python/index.html
@@ -2773,7 +2773,7 @@
                     <ul id="menu-support" class="menu">
                       <li id="menu-item-10199"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
-                          href="../java-full-stack-developer/index.html">Java Fullstack/a></li>
+                          href="../java-full-stack-developer/index.html">Java Fullstack</a></li>
                       <li id="menu-item-10199"
                         class="menu-item menu-item-type-post_type menu-item-object-lp_course menu-item-10199"><a
                           href="../selenium-with-java/index.html">Selenium with java</a></li>
