--- a/pbs/courses/java-full-stack-developer/$&/index.html
+++ b/pbs/courses/java-full-stack-developer/$&/index.html
@@ -2398,8 +2398,7 @@
                     <p>
                     <div class="edubin-quickinfo">
 
-                      <div class="qicon icon-1"><i class="fa fa-map-marker"></i>#HIG 205, 4th Floor, Roots Academy
-                        Building, Near MRO Office, KPHP, Hyderabad.</div>
+                      <div class="qicon icon-1"><i class="fa fa-map-marker"></i>#401, BnReddy Nagar, Near signal ,Telangana, Hyderabad-500079..</div>
 
                     </div>
 
