--- a/pbs/index.html
+++ b/pbs/index.html
@@ -2140,7 +2140,7 @@
                 <li> <a href="contact/index.html">Contact</a></li>
                 <li class="top-seperator">/</li>
                 <li> <a href="register/index.html">Register</a></li>
-                <li> <a href="openai/index.html">ChatGpt Assistence</a></li>
+                <li> <a href="openai/index.html">AI ChatGpt</a></li>
 
               </ul>
             </div>
@@ -3998,8 +3998,7 @@
                     <p>
                     <div class="edubin-quickinfo">
 
-                      <div class="qicon icon-1"><i class="fa fa-map-marker"></i>#HIG 205, 4th Floor, Roots Academy
-                        Building, Near MRO Office, KPHP, Hyderabad.</div>
+                      <div class="qicon icon-1"><i class="fa fa-map-marker"></i>#401, BnReddy Nagar, Near signal ,Telangana, Hyderabad-500079..</div>
 
                     </div>
 
