--- a/pbs/career-development/index.html
+++ b/pbs/career-development/index.html
@@ -2354,7 +2354,7 @@
                                       .elementor-widget-text-editor .elementor-drop-cap-letter {
                                         display: inline-block
                                       }
-                                    </style> Careers IT unique Competency Development Program provides a concrete,
+                                    </style> Pbssoft unique Competency Development Program provides a concrete,
                                     structured framework for systematic measurement and planning of talent development,
                                     whether on an individual level or across your entire organization.
                                   </div>
