upddatd whats upIcon

--- a/pbs/courses/devops/feed/index.html
+++ b/pbs/courses/devops/feed/index.html
@@ -1087,7 +1087,12 @@ div#comments {
             <div class="social">
                                                                           <span class="follow-us">Follow Us :</span>
                     
-                <ul class="social-icons alignright"><li class="facebook"><a href="https://www.facebook.com/" title="Like me on Facebook" target="_blank"><i class="glyph-icon flaticon-facebook"></i></a></li><li class="linkedin"><a href="https://www.linkedin.com/" title="Connect with me on LinkedIn" target="_blank"><i class="glyph-icon flaticon-linkedin"></i></a></li></ul>                             </div>  <!-- .Social -->  
+                <ul class="social-icons alignright">
+                  <li> <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !!!">
+                    <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
+                  </a>
+                </li>
+                  <li class="facebook"><a href="https://www.facebook.com/" title="Like me on Facebook" target="_blank"><i class="glyph-icon flaticon-facebook"></i></a></li><li class="linkedin"><a href="https://www.linkedin.com/" title="Connect with me on LinkedIn" target="_blank"><i class="glyph-icon flaticon-linkedin"></i></a></li></ul>                             </div>  <!-- .Social -->  
             
                         <ul>
                             </ul><!-- .Top widget -->
@@ -1351,7 +1356,7 @@ div#comments {
         <div id="qlwapp" class="qlwapp qlwapp-free qlwapp-bubble qlwapp-bottom-right qlwapp-all qlwapp-rounded">
 	<div class="qlwapp-container">
 		
-		<a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Hello pbssoft" role="button" tabindex="0" target="_blank">
+		<a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank">
 							<i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
 						<i class="qlwapp-close" data-action="close">&times;</i>
 					</a>
