--- a/pbs/contact/index.html
+++ b/pbs/contact/index.html
@@ -2128,7 +2128,10 @@
               <span class="follow-us">Follow Us :</span>
 
               <ul class="social-icons alignright">
-
+                <li> <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !!!">
+                  <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
+                </a>
+              </li>
                 <li class="linkedin"><a href="https://www.linkedin.com/" title="Connect with me on LinkedIn"
                     target="_blank"><i class="glyph-icon flaticon-linkedin"></i></a>
                 </li>
@@ -2688,7 +2691,7 @@
   <div id="qlwapp" class="qlwapp qlwapp-free qlwapp-bubble qlwapp-bottom-right qlwapp-all qlwapp-rounded">
     <div class="qlwapp-container">
 
-      <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Hello Pbssoft" role="button"
+      <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button"
         tabindex="0" target="_blank">
         <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
         <i class="qlwapp-close" data-action="close">&times;</i>
