--- a/pbs/courses/python/index.html
+++ b/pbs/courses/python/index.html
@@ -2119,6 +2119,10 @@
               <span class="follow-us">Follow Us :</span>
 
               <ul class="social-icons alignright">
+                <li> <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !!!">
+                  <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
+                </a>
+              </li>
                 <li class="facebook"><a href="https://www.facebook.com/pbssoftOnlineTrainings/"
                     title="Like me on Facebook" target="_blank"><i class="glyph-icon flaticon-facebook"></i></a></li>
                 <li class="linkedin"><a
@@ -2865,7 +2869,7 @@
   <div id="qlwapp" class="qlwapp qlwapp-free qlwapp-bubble qlwapp-bottom-right qlwapp-all qlwapp-rounded">
     <div class="qlwapp-container">
 
-      <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Hello pbssoft" role="button"
+      <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button"
         tabindex="0" target="_blank">
         <i class="qlwapp-icon qlwapp-whatsapp-icon"></i>
         <i class="qlwapp-close" data-action="close">&times;</i>
