fix for batches page

--- a/pbs/new/wp-content/plugins/elementor/assets/css/widget-icon-list.min.html
+++ b/pbs/new/wp-content/plugins/elementor/assets/css/widget-icon-list.min.html
@@ -2100,7 +2100,7 @@
 
 
             <div class="social">
-              <span class="follow-us">Follow Us :</span>
+              <span class="follow-us">Follow Us & Chat :</span>
 
               <ul class="social-icons alignright">
                 <li class="facebook"><a href="https://www.facebook.com/pbssoftOnlineTrainings/"
