--- a/pbs/register/index.html
+++ b/pbs/register/index.html
@@ -1104,7 +1104,7 @@ div#comments {
             
 
             <div class="social">
-                                                                          <span class="follow-us">Follow Us :</span>
+                                                                          <span class="follow-us">Follow Us & Chat :</span>
                     
                 <ul class="social-icons alignright">
                   <li> <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !!!">
@@ -1279,7 +1279,7 @@ class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-chi
 		</p>
 	</div>
 	<div class="col-md-6">
-		<p><span class="wpcf7-form-control-wrap" data-name="ModeofTraining"><select class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" aria-required="true" aria-invalid="false" name="ModeofTraining"><option value="Mode of Training">Mode of Training</option><option value="Corporate Training">Corporate Training</option><option value="Online Training">Online Training</option><option value="Classroom Training">Classroom Training</option><option value="Weekend Training">Weekend Training</option><option value="Internship">Internship</option></select></span>
+		<p><span class="wpcf7-form-control-wrap" data-name="ModeofTraining"><select class="wpcf7-form-control wpcf7-select wpcf7-validates-as-required" aria-required="true" aria-invalid="false" name="ModeofTraining"><option value="Mode of Training">Mode of Training</option><option value="Corporate Training">Corporate Training</option><option value="Online Training">Online Training</option><option value="Offline Training">Offline Training</option><option value="Weekend Training">Weekend Training</option><option value="Internship">Internship</option></select></span>
 		</p>
 	</div>
 	<div class="col-md-12">
