--- a/pbs/courses/devops-with-azure/feed/index.html
+++ b/pbs/courses/devops-with-azure/feed/index.html
@@ -1086,7 +1086,7 @@ div#comments {
             
 
             <div class="social">
-                                                                          <span class="follow-us">Follow Us :</span>
+                                                                          <span class="follow-us">Follow Us & Chat :</span>
                     
                 <ul class="social-icons alignright">
                   <li> <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !!!">
