--- a/pbs/index.html
+++ b/pbs/index.html
@@ -2123,7 +2123,7 @@
 
 
             <div class="social">
-              <span class="follow-us">Follow Us :</span>
+              <span class="follow-us">Follow Us & Chat :</span>
 
               <ul class="social-icons alignright">
                 <li> <a class="qlwapp-toggle" data-action="open" data-phone="919030972470" data-message="Welcome To Pbssoft IT Solutions !!! " role="button" tabindex="0" target="_blank" href="https://web.whatsapp.com/send?phone=919030972470&amp;text=Welcome To Pbssoft IT Solutions !!!">
@@ -2413,7 +2413,7 @@
                                     </a>
 
                                     <a href="new/contact/index.html">
-                                      <h3 class="icon-category-title" style="color: ">Classroom Trainings</h3>
+                                      <h3 class="icon-category-title" style="color: ">Offline Training</h3>
                                     </a>
                                   </div>
 
