--- a/pbs/about-us/index.html
+++ b/pbs/about-us/index.html
@@ -10,7 +10,7 @@
   <link rel="pingback" href="../xmlrpc.php">
 
   <script>(function (html) { html.className = html.className.replace(/\bno-js\b/, 'js') })(document.documentElement);</script>
-  <title>About Us &#8211; Pbssoft</title>
+  <title>About Us &#8211; Learn From the best Place</title>
   <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='http://fonts.googleapis.com/' />
   <link href='https://fonts.gstatic.com/' crossorigin rel='preconnect' />
