--- a/pbs/courses/java-full-stack-developer/feed/index.html
+++ b/pbs/courses/java-full-stack-developer/feed/index.html
@@ -8,7 +8,7 @@
   <link rel="pingback" href="https://www.pbssoft.com/xmlrpc.php">
 
   <script>(function (html) { html.className = html.className.replace(/\bno-js\b/, 'js') })(document.documentElement);</script>
-  <title>Page not found &#8211; pbssoft</title>
+  <title>Page not found &#8211; Learn From the best Place</title>
   <meta name='robots' content='max-image-preview:large' />
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
   <link href='https://fonts.gstatic.com' crossorigin rel='preconnect' />
