added new template

--- a/pbs/index.html
+++ b/pbs/index.html
@@ -9,18 +9,12 @@
     <script src="https://apis.google.com/js/client:platform.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VRYRGLFKQD"></script>
+
   <script type="text/javascript">
-    window.dataLayer = window.dataLayer || [];
-function gtag(){dataLayer.push(arguments);}
-gtag('js', new Date());
-
-gtag('config', 'G-VRYRGLFKQD');
-gtag('event', 'page_view', {
-  page_title: 'Home',
-  page_location: 'https://pbssoft.com'
-});
-
- 
+  window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-VRYRGLFKQD');
 
 </script>
   <meta charset="UTF-8">
@@ -3889,7 +3883,7 @@ gtag('event', 'page_view', {
                             
                                 <div class="testimonial-cont">
                                 
-                                  <h6 class="name">Anup S</h6>
+                                  <p style="color: orangered;"<h6 class="name">Anup S</h6><p>
                                 </div>
                               </div>
                               <div class="edubin-testi-single">
@@ -3903,7 +3897,8 @@ gtag('event', 'page_view', {
                                     structure of the training. We received all the content, and attention was given to
                                     all the students.
                                   </p>
-                                  <h6 class="name">Swetha P</h6>
+                                  <p style="color: orangered;"<h6 class="name">Swetha P</h6><p>
+
                                 </div>
                               </div>
                               <div class="edubin-testi-single">
@@ -3916,7 +3911,8 @@ gtag('event', 'page_view', {
                                   <p>Best place for learning.And having good faculty to teach us . I have learn more
                                     knowledge from this institute.They are providing classes for all technologies
                                   </p>
-                                  <h6 class="name">Keerthi D</h6>
+                                  <p style="color: orangered;"<h6 class="name">Keerthi D</h6><p>
+
                                 </div>
                               </div>
                             </div> <!-- End testimonial style 1 -->
